# js_workspace_tools

./: Cargo.toml  README.md
src/: dependencies.rs  git.rs  graph.rs  lib.rs  paths.rs  scope.rs
src/structs/: mod.rs  package_info.rs  workspace_info.rs
src/tests/: dependencies.rs  get_init_default_branch.rs  get_scoped_packages.rs  get_workspace_root.rs  get_workspaces.rs  mod.rs
src/workspace/: mod.rs  package.rs  workspace_manager.rs
src/workspace/implementations/: mod.rs  pnpm.rs  yarn.rs
