[package]
name = "js_workspace_tools"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path = { package = "nodejs_path", version = "^0.0.8" }
serde_json = "1.0"
wax = "0.3.0"
glob = "0.3.0"
regex = "1.5.4"
serde_yaml = "0.8.23"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
lets_find_up = "*"
# globby = { path= "../globby" }
petgraph = "0.6.0"
once_cell = "1.9.0"